fix of clipping problem with optionset dropdowns

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-tracker-capture-dynamic/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-tracker-capture-dynamic/styles/style.css
@@ -453,8 +453,6 @@ input[type=date]::-webkit-inner-spin-button, input[type=date]::-webkit-outer-spi
 
 .dashboard-widget-container {
     height: auto;
-    overflow-x:auto;
-    overflow-y:auto;
 }
 
 .widget-link {
